<resources>
    <string name="app_name">Money Tracker</string>
    <string name="statistic_text">Count transactions</string>
    <string name="large">Large</string>
    <string-array name="navigation_drawer_items">
        <item>Costs</item>
        <item>Categories</item>
        <item>Statistics</item>
    </string-array>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="statistic">Statistics</string>
    <string name="add_transaction_str">Add Transaction</string>
    <string name="hint_dayMount">01</string>
    <string name="hitn_year">1970</string>
    <string name="transaction">Transaction</string>
    <string name="summa">Summa</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="example_transaction">T-Short</string>
    <string name="example_sum">300</string>
    <string name="ok">Ok</string>
    <string name="info_transactions">Info Transactions</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_title">Write title category</string>
    <string name="update_category">Update Category</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="fragment_manager">Fragment Manager</string>
    <string name="search">Search</string>
    <string name="spent_all">Spent All:</string>
    <string name="summa_today">Today:</string>
    <string name="summa_month">Month:</string>
    <string name="summa_year">Year:</string>
    <string name="all_spent_money">Spent all money:</string>
</resources>
